--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/tailwind": "^5.1.3",
     "@neondatabase/serverless": "^0.9.5",
-    "astro": "^4.15.6"
+    "astro": "^4.15.6",
+    "tailwindcss": "^3.4.16"
   }
 }
