--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "soft-share",
+  "name": "soft-share-avanzado",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^6.0.2",
-    "@neondatabase/serverless": "^0.9.5",
-    "astro": "^5.7.13",
-    "tailwindcss": "^3.4.16"
+    "@fontsource-variable/onest": "^5.2.9",
+    "@neondatabase/serverless": "^1.0.1",
+    "@tailwindcss/vite": "^4.1.11",
+    "astro": "^5.10.2",
+    "dotenv": "^17.0.1",
+    "marked": "^16.0.0",
+    "tailwindcss": "^4.1.11"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
