--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vercel": "^8.2.3",
     "@fontsource-variable/onest": "^5.2.9",
     "@neondatabase/serverless": "^1.0.1",
     "@tailwindcss/vite": "^4.1.11",
