--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/vercel": "^8.2.3",
+    "@astrojs/vercel": "^8.0.4",
     "@fontsource-variable/onest": "^5.2.9",
+    "@midudev/tailwind-animations": "^0.2.0",
     "@neondatabase/serverless": "^1.0.1",
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.10.2",
